--- a/css/common.css
+++ b/css/common.css
@@ -144,6 +144,7 @@ a:hover {color:#911e5e;text-decoration: none;}
 	color: #313231;
 	font-weight: 600;
 	font-size: 16px;
+	margin-top: 48px;
 	margin-bottom: 14px;
 	padding-bottom: 14px;
 	border-bottom: 1px solid #e4e4e4;
