--- a/css/common.css
+++ b/css/common.css
@@ -146,6 +146,7 @@ a:hover {color:#911e5e;text-decoration: none;}
 	font-size: 16px;
 	margin-top: 48px;
 	margin-bottom: 14px;
+	padding-top: 48px;
 	padding-bottom: 14px;
 	border-bottom: 1px solid #e4e4e4;
 }
