--- a/css/common.css
+++ b/css/common.css
@@ -46,19 +46,19 @@ a:hover {color:#911e5e;text-decoration: none;}
 }
 
 .block .header {
-	color: #00cdac;
+	color: #039ee0;
 	font-size: 36px;
 	font-weight: 600;
 	margin-bottom: 40px;
 }
 
 .block h3.header {
-	color: #00cdac;
+	color: #039ee0;
 	font-size: 24px;
 	font-weight: 600;
 	margin-bottom: 40px;
 	line-height: 140%;
-	height: 48px;
+	min-height: 48px;
 }
 
 .block .description {
@@ -132,6 +132,17 @@ a:hover {color:#911e5e;text-decoration: none;}
 	height: 190px;
 	padding: 24px;
 	border: 1px solid #efefef;
+}
+
+.brand-block h3.header {
+	margin: 0 auto 14px auto;
+	padding-top: 52px;
+	padding-bottom: 14px;
+	border-bottom: 1px solid #e4e4e4;
+	background-repeat: no-repeat;
+	background-size: 48px 48px;
+	background-position: top center;
+	text-align: center;
 }
 
 .map-block {
@@ -228,3 +239,4 @@ footer.footer-block {
 .icon-small-parking { background-image: url(../images/icon_crewshop_small_parking.png); }
 .icon-small-car { background-image: url(../images/icon_crewshop_small_car.png); }
 .icon-small-bus { background-image: url(../images/icon_crewshop_small_bus.png); }
+.icon-small-tax-refund { background-image: url(../images/icon_crewshop_small_tax_refund.png); }
