--- a/css/common.css
+++ b/css/common.css
@@ -1,242 +1,224 @@
 @import url(https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css);
-
 body {
-	font-family: 'NanumSquare', sans-serif;
-	letter-spacing: -0.02em;
-	line-height: 160%;
+  font-family: "rooney-sans";
+  letter-spacing: -0.02em;
+  line-height: 160%;
 }
-
-.navbar-default .navbar-nav > li > a {
-	color:#fff;
-	font-size:12px;
-	font-weight:500;
-	letter-spacing: 0;
-	font-family: "Museo",helvetica,tahoma,sans-serif;
-	font-weight: 500;
+.block {
+  padding: 64px 0;
 }
-
-.navbar-default .navbar-nav > li > a:hover {
-	color:#911e5e;
-}
-
-.navbar {
-	-moz-transition: all 0.3s ease-in;
-    /* WebKit */
-    -webkit-transition: all 0.3s ease-in;
-    /* Opera */
-    -o-transition: all 0.3s ease-in;
-    /* Standard */
-    transition: all 0.3s ease-in;
-}
-
-.navbar-color {
-	background-color: rgba(249, 172, 173, 0.7) !important;
-}
-
-a {color:rgba(249, 172, 173, 0.7);}
-a:hover {color:#911e5e;text-decoration: none;}
-
-
-/* block */
-
-.block { padding: 64px 0; }
 .block .header,
+.block .header-sub,
 .block .description {
-	text-align: center;
+  text-align: center;
 }
-
 .block .header {
-	color: #039ee0;
-	font-size: 36px;
-	font-weight: 600;
-	margin-bottom: 40px;
+  color: #14232b;
+  font-size: 36px;
+  font-weight: 600;
 }
-
+.block .header-sub {
+  color: #14232b;
+  font-size: 18px;
+  font-weight: 600;
+  margin: 0 0 40px 0;
+}
 .block h3.header {
-	color: #039ee0;
-	font-size: 24px;
-	font-weight: 600;
-	margin-bottom: 40px;
-	line-height: 140%;
-	min-height: 48px;
+  color: #035d91;
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 40px;
+  line-height: 140%;
+  min-height: 48px;
 }
-
 .block .description {
-	font-size: 16px;
+  font-size: 16px;
 }
-
 /*-- hero --*/
-
 .intro-header {
-	width: 100%;
-	height: 600px;
-	color: #fff;
+  width: 100%;
+  height: 900px;
+  color: #fff;
 }
-
 .intro-header .logo {
-	width: 150px;
-	margin: 0 auto;
-	padding-top: 16px;
+  width: 200px;
+  margin: 0 auto;
+  padding-top: 24px;
 }
-
+.intro-header .nav-custom {
+  display: inline-block;
+  width: 100%;
+  list-style: none;
+  margin: 0 auto;
+  padding: 0;
+  text-align: center;
+}
+.intro-header .nav-custom li {
+  display: inline-block;
+  margin: 0 14px;
+  padding-right: 30px;
+  border-right: 1px solid rgba(255, 255, 255, 0.1);
+}
+.intro-header .nav-custom li:last-child {
+  margin: 0;
+  padding-right: 0;
+  border-right: none;
+}
 .intro-header h1 {
-	color: #fff;
-	font-weight: 800;
-	font-size: 68px;
-	margin-top: 114px;
+  color: #fff;
+  font-weight: 800;
+  font-size: 68px;
+  margin-top: 114px;
 }
-
 .intro-header h2 {
-	color: #fff;
-	font-size: 18px;
-	margin-top: 48px;
-	line-height: 170%;
+  color: #fff;
+  font-size: 20px;
+  margin-top: 24px;
+  line-height: 170%;
 }
-
+.intro-header .arrow-bottom {
+  display: block;
+  width: 48px;
+  margin: 0 auto;
+  padding-top: 230px;
+}
 .intro-hero {
   background-image: url(../images/hero-top.jpg);
 }
-
 .logo-hero {
-	width: 580px;
-	fill: #ffffff;
+  width: 580px;
+  fill: #ffffff;
 }
-
 .concept-block {
-	color: #fff;
+  color: #fff;
 }
-
 .concept-block .header {
-	color: #fff;
+  color: #fff;
 }
-
 .concept-block .description {
-	line-height: 170%;
+  line-height: 170%;
 }
-
+.concept-block .paragraph {
+  font-size: 16px;
+  line-height: 200%;
+  word-break: keep-all;
+}
+.concept-block .paragraph strong {
+  display: inline-block;
+  font-size: 20px;
+  line-height: 200%;
+  word-break: keep-all;
+  text-align: center;
+}
 .concept-hero {
   background-image: url(../images/introduce-back.jpg);
 }
-
-.concept-block .paragraph {
-	font-size: 16px;
-	line-height: 200%;
-	word-break: keep-all;
-}
-
-.brand-block {
-
-}
-
 .brand-block .brand-item {
-	height: 190px;
-	padding: 24px;
-	border: 1px solid #efefef;
+  height: 190px;
+  padding: 24px;
+  border: 1px solid #efefef;
 }
-
 .brand-block h3.header {
-	margin: 0 auto 14px auto;
-	padding-top: 52px;
-	padding-bottom: 14px;
-	border-bottom: 1px solid #e4e4e4;
-	background-repeat: no-repeat;
-	background-size: 48px 48px;
-	background-position: top center;
-	text-align: center;
+  height: 180px;
+  margin: 0 auto 14px auto;
+  padding-top: 76px;
+  padding-bottom: 14px;
+  border-bottom: 1px solid #e4e4e4;
+  background-repeat: no-repeat;
+  background-size: 72px 72px;
+  background-position: top center;
+  text-align: center;
+  line-height: 120%;
 }
-
 .map-block {
-	width: 100%;
-	background-color: #FAFAFA;
-	padding: 68px 0;
+  width: 100%;
+  background-color: #FAFAFA;
+  padding: 68px 0;
 }
-
 .map-block h3.title {
-	color: #313231;
-	font-weight: 600;
-	font-size: 20px;
-	margin-bottom: 14px;
-	padding-top: 52px;
-	padding-bottom: 14px;
-	border-bottom: 1px solid #e4e4e4;
-	background-repeat: no-repeat;
-	background-size: 48px 48px;
-	background-position: top center;
-	text-align: center;
+  color: #313231;
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 14px;
+  padding-top: 76px;
+  padding-bottom: 14px;
+  border-bottom: 1px solid #e4e4e4;
+  background-repeat: no-repeat;
+  background-size: 72px 72px;
+  background-position: top center;
+  text-align: center;
 }
-
 .news-block .article-item {
-	margin-bottom: 24px;
-	padding-bottom: 24px;
-	border-bottom: 1px solid #e4e4e4;
+  margin-bottom: 24px;
+  padding-bottom: 24px;
+  border-bottom: 1px solid #e4e4e4;
 }
-
 .news-block .article-item .title {
-	color: #313231;
-	font-size: 20px;
-	font-weight: 800;
+  color: #313231;
+  font-size: 20px;
+  font-weight: 800;
 }
-
 .news-block .article-item .date {
-	display: block;
-	color: #A8A8A8;
-	font-size: 13px;
-	margin-bottom: 14px;
+  display: block;
+  color: #A8A8A8;
+  font-size: 13px;
+  margin-bottom: 14px;
 }
-
 .news-block .article-item p {
-	color: #A8A8A8;
-	font-size: 13px;
+  color: #A8A8A8;
+  font-size: 13px;
 }
-
 .news-block .article-item .feature-image {
-	height: 194px;
-	padding: 24px;
-	border: 1px solid #efefef;
+  height: 194px;
+  padding: 24px;
+  border: 1px solid #efefef;
 }
-
 .contact-block {
-	color: #fff;
-	width: 100%;
-	padding: 40px 0;
-	background-color: #00cdac;
+  color: #fff;
+  width: 100%;
+  padding: 40px 0;
+  background-color: #035d91;
 }
-
 .contact-block .header {
-	color: #fff;
-	margin-bottom: 24px;
-	text-align: left;
-
+  color: #fff;
+  margin-bottom: 24px;
+  font-size: 24px;
+  text-align: left;
 }
-
 footer.footer-block {
-	color: #fff;
-	width: 100%;
-	padding: 40px 0;
-	background-color: #072624;
+  color: #fff;
+  width: 100%;
+  padding: 40px 0;
+  background-color: #14232b;
 }
-
 .background-full {
-	background-position: center center;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
-
-.introduce-block {
-	height: 500px;
-	padding-top: 170px;
-}
-
 #brief-3 {
-	-moz-transition: all 0.4s ease-in;
-    -webkit-transition: all 0.4s ease-in;
-    -o-transition: all 0.4s ease-in;
-    transition: all 0.4s ease-in;
+  -moz-transition: all 0.4s ease-in;
+  -webkit-transition: all 0.4s ease-in;
+  -o-transition: all 0.4s ease-in;
+  transition: all 0.4s ease-in;
 }
-
-.icon-small-parking { background-image: url(../images/icon_crewshop_small_parking.png); }
-.icon-small-car { background-image: url(../images/icon_crewshop_small_car.png); }
-.icon-small-bus { background-image: url(../images/icon_crewshop_small_bus.png); }
-.icon-small-tax-refund { background-image: url(../images/icon_crewshop_small_tax_refund.png); }
+.icon-small-parking {
+  background-image: url(../images/icon_crewshop_small_parking.png);
+}
+.icon-small-car {
+  background-image: url(../images/icon_crewshop_small_car.png);
+}
+.icon-small-bus {
+  background-image: url(../images/icon_crewshop_small_bus.png);
+}
+.icon-small-tax-refund {
+  background-image: url(../images/icon_crewshop_small_tax_refund.png);
+}
+.icon-small-counselor {
+  background-image: url(../images/icon_crewshop_small_counselor.png);
+}
+.icon-small-bag-discount {
+  background-image: url(../images/icon_crewshop_small_bag_discount.png);
+}
