--- a/css/common.css
+++ b/css/common.css
@@ -41,8 +41,8 @@ body {
   color: #fff;
 }
 .intro-header .logo {
-  width: 200px;
-  margin: 0 auto;
+  width: 30px;
+  margin: 0 auto 24px auto;
   padding-top: 24px;
 }
 .intro-header .nav-custom {
