--- a/css/common.less
+++ b/css/common.less
@@ -50,8 +50,8 @@ body {
 	color: #fff;
 
 	.logo {
-		width: 200px;
-		margin: 0 auto;
+		width: 30px;
+		margin: 0 auto 24px auto;
 		padding-top: 24px;
 	}
 
