테스트용 페이지 변경

--- a/css/common.css
+++ b/css/common.css
@@ -1,224 +1,1 @@
-@import url(https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css);
-body {
-  font-family: "rooney-sans";
-  letter-spacing: -0.02em;
-  line-height: 160%;
-}
-.block {
-  padding: 64px 0;
-}
-.block .header,
-.block .header-sub,
-.block .description {
-  text-align: center;
-}
-.block .header {
-  color: #14232b;
-  font-size: 36px;
-  font-weight: 600;
-}
-.block .header-sub {
-  color: #14232b;
-  font-size: 18px;
-  font-weight: 600;
-  margin: 0 0 40px 0;
-}
-.block h3.header {
-  color: #035d91;
-  font-size: 24px;
-  font-weight: 600;
-  margin-bottom: 40px;
-  line-height: 140%;
-  min-height: 48px;
-}
-.block .description {
-  font-size: 16px;
-}
-/*-- hero --*/
-.intro-header {
-  width: 100%;
-  height: 900px;
-  color: #fff;
-}
-.intro-header .logo {
-  width: 30px;
-  margin: 0 auto 24px auto;
-  padding-top: 24px;
-}
-.intro-header .nav-custom {
-  display: inline-block;
-  width: 100%;
-  list-style: none;
-  margin: 0 auto;
-  padding: 0;
-  text-align: center;
-}
-.intro-header .nav-custom li {
-  display: inline-block;
-  margin: 0 14px;
-  padding-right: 30px;
-  border-right: 1px solid rgba(255, 255, 255, 0.1);
-}
-.intro-header .nav-custom li:last-child {
-  margin: 0;
-  padding-right: 0;
-  border-right: none;
-}
-.intro-header h1 {
-  color: #fff;
-  font-weight: 800;
-  font-size: 68px;
-  margin-top: 114px;
-}
-.intro-header h2 {
-  color: #fff;
-  font-size: 20px;
-  margin-top: 24px;
-  line-height: 170%;
-}
-.intro-header .arrow-bottom {
-  display: block;
-  width: 48px;
-  margin: 0 auto;
-  padding-top: 230px;
-}
-.intro-hero {
-  background-image: url(../images/hero-top.jpg);
-}
-.logo-hero {
-  width: 580px;
-  fill: #ffffff;
-}
-.concept-block {
-  color: #fff;
-}
-.concept-block .header {
-  color: #fff;
-}
-.concept-block .description {
-  line-height: 170%;
-}
-.concept-block .paragraph {
-  font-size: 16px;
-  line-height: 200%;
-  word-break: keep-all;
-}
-.concept-block .paragraph strong {
-  display: inline-block;
-  font-size: 20px;
-  line-height: 200%;
-  word-break: keep-all;
-  text-align: center;
-}
-.concept-hero {
-  background-image: url(../images/introduce-back.jpg);
-}
-.brand-block .brand-item {
-  height: 190px;
-  padding: 24px;
-  border: 1px solid #efefef;
-}
-.brand-block h3.header {
-  height: 180px;
-  margin: 0 auto 14px auto;
-  padding-top: 76px;
-  padding-bottom: 14px;
-  border-bottom: 1px solid #e4e4e4;
-  background-repeat: no-repeat;
-  background-size: 72px 72px;
-  background-position: top center;
-  text-align: center;
-  line-height: 120%;
-}
-.map-block {
-  width: 100%;
-  background-color: #FAFAFA;
-  padding: 68px 0;
-}
-.map-block h3.title {
-  color: #313231;
-  font-weight: 600;
-  font-size: 20px;
-  margin-bottom: 14px;
-  padding-top: 76px;
-  padding-bottom: 14px;
-  border-bottom: 1px solid #e4e4e4;
-  background-repeat: no-repeat;
-  background-size: 72px 72px;
-  background-position: top center;
-  text-align: center;
-}
-.news-block .article-item {
-  margin-bottom: 24px;
-  padding-bottom: 24px;
-  border-bottom: 1px solid #e4e4e4;
-}
-.news-block .article-item .title {
-  color: #313231;
-  font-size: 20px;
-  font-weight: 800;
-}
-.news-block .article-item .date {
-  display: block;
-  color: #A8A8A8;
-  font-size: 13px;
-  margin-bottom: 14px;
-}
-.news-block .article-item p {
-  color: #A8A8A8;
-  font-size: 13px;
-}
-.news-block .article-item .feature-image {
-  height: 194px;
-  padding: 24px;
-  border: 1px solid #efefef;
-}
-.contact-block {
-  color: #fff;
-  width: 100%;
-  padding: 40px 0;
-  background-color: #035d91;
-}
-.contact-block .header {
-  color: #fff;
-  margin-bottom: 24px;
-  font-size: 24px;
-  text-align: left;
-}
-footer.footer-block {
-  color: #fff;
-  width: 100%;
-  padding: 40px 0;
-  background-color: #14232b;
-}
-.background-full {
-  background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-#brief-3 {
-  -moz-transition: all 0.4s ease-in;
-  -webkit-transition: all 0.4s ease-in;
-  -o-transition: all 0.4s ease-in;
-  transition: all 0.4s ease-in;
-}
-.icon-small-parking {
-  background-image: url(../images/icon_crewshop_small_parking.png);
-}
-.icon-small-car {
-  background-image: url(../images/icon_crewshop_small_car.png);
-}
-.icon-small-bus {
-  background-image: url(../images/icon_crewshop_small_bus.png);
-}
-.icon-small-tax-refund {
-  background-image: url(../images/icon_crewshop_small_tax_refund.png);
-}
-.icon-small-counselor {
-  background-image: url(../images/icon_crewshop_small_counselor.png);
-}
-.icon-small-bag-discount {
-  background-image: url(../images/icon_crewshop_small_bag_discount.png);
-}
+@import url(https://cdn.rawgit.com/openhiun/hangul/14c0f6faa2941116bb53001d6a7dcd5e82300c3f/nanumbarungothic.css);@import url(http://fonts.googleapis.com/earlyaccess/kopubbatang.css);.icon-small-parking{background-image:url(../images/icon_crewshop_small_parking.png)}.icon-small-car{background-image:url(../images/icon_crewshop_small_car.png)}.icon-small-bus{background-image:url(../images/icon_crewshop_small_bus.png)}.icon-small-tax-refund{background-image:url(../images/icon_crewshop_small_tax_refund.png)}.icon-small-counselor{background-image:url(../images/icon_crewshop_small_counselor.png)}.icon-small-bag-discount{background-image:url(../images/icon_crewshop_small_bag_discount.png)}.logo-patagonia{background-image:url(../images/logo/logo-patagonia.png)}.logo-normann{background-image:url(../images/logo/logo-normann.png)}.logo-vita{background-image:url(../images/logo/logo-vita.png)}.logo-kai{background-image:url(../images/logo/logo-kai.jpg)}.logo-illy{background-image:url(../images/logo/logo-illy.jpg)}.logo-cybex{background-image:url(../images/logo/logo-cybex.png)}.logo-kusmitea{background-image:url(../images/logo/logo-kusmitea.png)}.logo-delonghi{background-image:url(../images/logo/logo-delonghi.png)}.logo-recaro{background-image:url(../images/logo/logo-recaro.png)}body{font-family:sans-serif;font-weight:500;letter-spacing:-0.01em;line-height:160%;word-break:keep-all}a,a:hover,a:active,a:visited{color:inherit;text-decoration:none}.divider{width:100%;height:1px;border-top:1px solid #efefef}.concept-hero{background-image:url(../images/introduce-back.jpg)}.contact-hero{background-image:url(../images/contact-back.jpg)}.intro-hero{background-image:url(../images/introduce-back.jpg)}.cafe-hero{background-image:url(../images/cafe-back.jpg)}.hero-sub-shop{background-image:url(../images/hero-sub-shop.jpg)}.hero-sub-brand{background-image:url(../images/hero-sub-brand.jpg)}.hero-sub-bakery{background-image:url(../images/hero-sub-bakery.jpg)}.hero-sub-contact{background-image:url(../images/hero-sub-contact.jpg)}.hero-sub-contact-1{background-image:url(../images/hero-sub-contact-1.jpg);height:480px}.btn-orange{color:#fff;background-color:#f24609;border:0;border-radius:30px;padding:16px 20px}.btn-orange:hover{color:#fff;background-color:#c93500;border:0;border-radius:30px;padding:16px 20px}.btn-wrap{margin-top:20px;text-align:center}.block{padding:64px 0}.block .header,.block .header-sub,.block .description,.block h3.paragraph-header{text-align:center}.block .header{font-size:36px;font-weight:600;margin-bottom:0}.block .header-sub{color:#14232b;font-size:18px;margin:8px 0 40px 0}.block h3.paragraph-header{color:#333;font-size:36px;font-weight:300;font-family:"Kopub Batang";margin-top:0;margin-bottom:40px;line-height:140%;z-index:5;letter-spacing:-0.04em}.block h3.paragraph-header:before{content:"";display:inline-block;width:48px;height:48px;margin-right:-8px;background-image:url(../images/q-start.png);background-repeat:no-repeat;background-position:center center;-webkit-background-size:48px;-moz-background-size:48px;-o-background-size:48px;background-size:48px;z-index:1}.block h3.paragraph-header:after{content:"";display:inline-block;width:48px;height:64px;margin-left:-8px;background-image:url(../images/q-end.png);background-repeat:no-repeat;background-position:center 16px;-webkit-background-size:48px;-moz-background-size:48px;-o-background-size:48px;background-size:48px;z-index:1}.block p{margin-bottom:36px;font-size:16px;font-weight:300;line-height:170%;text-align:center}.block p:last-child{margin-bottom:0}.intro-header{width:100%;height:900px;color:#fff}.intro-header .logo{width:30px;margin:0 auto 24px auto;padding-top:24px}.intro-header .nav-custom{display:inline-block;width:100%;list-style:none;margin:0 auto;padding:0;text-align:center}.intro-header .nav-custom li{display:inline-block;margin:0 14px;padding-right:30px;border-right:1px solid rgba(255,255,255,0.1)}.intro-header .nav-custom li:last-child{margin:0 0 0 14px;padding-right:0;border-right:none}.intro-header h1{color:#fff;font-weight:100;font-size:86px;margin-top:114px}.intro-header h2{color:#fff;font-size:20px;margin-top:24px;line-height:170%;font-weight:300}.intro-header .btn-more-info{width:100%;padding-top:200px;text-align:center}.intro-header .arrow-bottom{display:block;width:48px;margin:0 auto;padding-top:16px}.logo-hero{width:580px;fill:#fff}.concept-block{color:#fff}.concept-block .header{color:#fff}.concept-block .description{line-height:170%}.concept-block .paragraph{font-size:16px;line-height:200%;word-break:keep-all}.concept-block .paragraph strong{display:inline-block;font-size:20px;line-height:200%;word-break:keep-all;text-align:center}.brand-block .brand-item{height:190px;padding:24px;border:1px solid #efefef}.brand-block h3.header{height:180px;margin:0 auto 14px auto;padding-top:76px;padding-bottom:14px;border-bottom:1px solid #e4e4e4;background-repeat:no-repeat;background-size:72px 72px;background-position:top center;text-align:center;line-height:120%}.brand-block .brand-list-wrap{list-style:none;margin-left:-15px;margin-right:-15px;padding:0}.brand-block .brand-list-wrap li{display:inline-block;position:relative;float:left;width:25%;height:200px;margin-bottom:20px;padding-left:15px;padding-right:15px;box-sizing:border-box}.brand-block .brand-list-wrap li .brand-list-item{width:100%;height:200px;border:1px solid #e3e3e3;padding:140px 16px 16px 16px;text-align:center;background-repeat:no-repeat;background-position:center center;-webkit-background-size:140px;-moz-background-size:140px;-o-background-size:140px;background-size:140px;opacity:.3;-webkit-transition:opacity .25s ease-in-out;-moz-transition:opacity .25s ease-in-out;-ms-transition:opacity .25s ease-in-out;-o-transition:opacity .25s ease-in-out;transition:opacity .25s ease-in-out}.brand-block .brand-list-wrap li .brand-list-item:hover{opacity:.9}.cafe-block{color:#fff;width:100%;background-color:#fafafa;padding:68px 0}.cafe-block h2.header{color:#fff}.cafe-block h3.header-sub{color:#fff}.direction-block{width:100%;background-color:#fafafa;padding:68px 0}.direction-block h3.title{color:#313231;font-weight:600;font-size:20px;margin-bottom:14px;padding-top:76px;padding-bottom:14px;border-bottom:1px solid #e4e4e4;background-repeat:no-repeat;background-size:72px 72px;background-position:top center;text-align:center}.contact-block{color:#fff;width:100%;padding:40px 0;background-color:#353535}.contact-block .header{color:#fff}.contact-block .header-sub{color:#fff}.contact-block .contact-item{font-size:30px;font-weight:100;margin-bottom:40px;line-height:100%}.contact-block .contact-item strong{display:block;margin-bottom:4px;font-size:16px}.opening-time-block{color:#fff;width:100%;height:200px;padding:40px 0;background-color:#141313;border-bottom:1px solid #242323}.opening-time-block .opening-time-item strong{display:block;font-size:16px;margin-bottom:16px}.sub-header{color:#909090;width:100%;height:72px;background-color:#000}.sub-header .logo{width:30px;padding-top:24px}.sub-header .nav-custom{display:inline-block;width:100%;list-style:none;padding:0;text-align:right}.sub-header .nav-custom li{color:#909090;height:72px;display:inline-block;margin-left:-3px;padding:24px 24px 0 24px}.sub-header .nav-custom li:hover{color:#fff;background-color:#363b3d;-webkit-transition:background-color .25s ease-in-out,color .25s ease-in-out;-moz-transition:background-color .25s ease-in-out,color .25s ease-in-out;-ms-transition:background-color .25s ease-in-out,color .25s ease-in-out;-o-transition:background-color .25s ease-in-out,color .25s ease-in-out;transition:background-color .25s ease-in-out,color .25s ease-in-out}.sub-header .nav-custom li:last-child{border-right:none}.sub-title{color:#fff;padding:134px 0;text-align:center}.sub-title h1{font-weight:200;font-size:48px;word-break:keep-all}.sub-title h2{font-size:20px;line-height:170%;font-weight:300;margin:0}footer.footer-block{color:#fff;width:100%;padding:40px 0;background-color:#141313}.background-full{background-position:center center;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover}
