헤더쪽 정리

--- a/css/logo.less
+++ b/css/logo.less
@@ -1,9 +1,30 @@
-.logo-patagonia 	{ background-image: url(../images/logo/logo-patagonia.png); }
-.logo-normann 		{ background-image: url(../images/logo/logo-normann.png); }
-.logo-vita	 		{ background-image: url(../images/logo/logo-vita.png); }
-.logo-kai	 		{ background-image: url(../images/logo/logo-kai.jpg); }
-.logo-illy	 		{ background-image: url(../images/logo/logo-illy.jpg); }
-.logo-cybex	 		{ background-image: url(../images/logo/logo-cybex.png); }
-.logo-kusmitea	 	{ background-image: url(../images/logo/logo-kusmitea.png); }
-.logo-delonghi	 	{ background-image: url(../images/logo/logo-delonghi.png); }
-.logo-recaro	 	{ background-image: url(../images/logo/logo-recaro.png); }
+.logo-patagonia 		{ background-image: url(../images/logo/logo-patagonia.png); }
+.logo-normann 			{ background-image: url(../images/logo/logo-normann.png); }
+.logo-vita	 			{ background-image: url(../images/logo/logo-vita.png); }
+.logo-kai	 			{ background-image: url(../images/logo/logo-kai.jpg); }
+.logo-illy	 			{ background-image: url(../images/logo/logo-illy.jpg); }
+.logo-cybex	 			{ background-image: url(../images/logo/logo-cybex.png); }
+.logo-kusmitea	 		{ background-image: url(../images/logo/logo-kusmitea.png); }
+.logo-delonghi	 		{ background-image: url(../images/logo/logo-delonghi.png); }
+.logo-recaro	 		{ background-image: url(../images/logo/logo-recaro.png); }
+
+.logo-wesco	 			{ background-image: url(../images/logo/logo-wesco.png); }
+.logo-stelton	 		{ background-image: url(../images/logo/logo-stelton.png); }
+.logo-house-doctor		{ background-image: url(../images/logo/logo-house-doctor.png); }
+.logo-alfi	 			{ background-image: url(../images/logo/logo-alfi.png); }
+.logo-britax	 		{ background-image: url(../images/logo/logo-britax.png); }
+.logo-skeppshult		{ background-image: url(../images/logo/logo-skeppshult.png); }
+.logo-cote-table		{ background-image: url(../images/logo/logo-cote-table.png); }
+.logo-alessi	 		{ background-image: url(../images/logo/logo-alessi.png); }
+.logo-kahler	 		{ background-image: url(../images/logo/logo-kahler.png); }
+.logo-serax	 			{ background-image: url(../images/logo/logo-serax.png); }
+.logo-joseph-joseph		{ background-image: url(../images/logo/logo-joseph-joseph.png); }
+.logo-marimekko	 		{ background-image: url(../images/logo/logo-marimekko.png); }
+.logo-nomi	 			{ background-image: url(../images/logo/logo-nomi.png); }
+.logo-kaymet	 		{ background-image: url(../images/logo/logo-kaymet.png); }
+.logo-reichenbach		{ background-image: url(../images/logo/logo-reichenbach.png); }
+.logo-apilco	 		{ background-image: url(../images/logo/logo-apilco.png); }
+.logo-burleigh	 		{ background-image: url(../images/logo/logo-burleigh.png); }
+.logo-portmeirion		{ background-image: url(../images/logo/logo-portmeirion.png); }
+.logo-nesmuk			{ background-image: url(../images/logo/logo-nesmuk.png); }
+.logo-royal-copenhagen	{ background-image: url(../images/logo/logo-royal-copenhagen.png); }
