--- a/css/common.less
+++ b/css/common.less
@@ -19,6 +19,10 @@ a:visited {
 	text-decoration: none;
 }
 
+button {
+	outline: none;
+}
+
 /*-- common --*/
 .divider { width: 100%; height: 1px; border-top: 1px solid #efefef; }
 
@@ -30,7 +34,7 @@ a:visited {
 .hero-sub-brand { background-image: url(../images/hero-sub-brand.jpg); }
 .hero-sub-bakery { background-image: url(../images/hero-sub-bakery.jpg); }
 .hero-sub-contact { background-image: url(../images/hero-sub-contact.jpg); }
-.hero-sub-contact-1 { background-image: url(../images/hero-sub-contact-1.jpg); height: 480px; }
+.hero-sub-contact-1 { background-image: url('../images/hero-sub-contact-1.jpg'); height: 480px; }
 
 .btn-orange {
 	color: #fff;
@@ -64,9 +68,10 @@ a:visited {
 	}
 
 	.header {
+		color: #44494c;
 		font-size: 36px;
 		font-weight: 600;
-		margin-bottom: 0;
+		margin-bottom: 36px;
 	}
 
 	.header-sub {
@@ -123,7 +128,6 @@ a:visited {
 	p {
 		margin-bottom: 36px;
 		font-size: 16px;
-		font-weight: 300;
 		line-height: 170%;
 		text-align: center;
 	}
@@ -131,6 +135,23 @@ a:visited {
 	p:last-child {
 		margin-bottom: 0;
 	}
+}
+
+.background-full {
+	background-position: center center;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
+.navbar {
+	margin-bottom: 0;
+}
+
+.navbar-inverse {
+	background-color: rgba(0,0,0,0.8) !important;
+	border: 0 !important;
 }
 
 /*-- hero --*/
@@ -197,11 +218,6 @@ a:visited {
 	}
 }
 
-.logo-hero {
-	width: 580px;
-	fill: #ffffff;
-}
-
 .concept-block {
 	color: #fff;
 
@@ -249,6 +265,7 @@ a:visited {
 	}
 
 	.brand-list-wrap {
+		display: block;
 		list-style: none;
 		margin-left: -15px;
 		margin-right: -15px;
@@ -260,7 +277,7 @@ a:visited {
 			float: left;
 			width: 25%;
 			height: 200px;
-			margin-bottom: 20px;
+			margin-bottom: 25px;
 			padding-left: 15px;
 			padding-right: 15px;
 			box-sizing: border-box;
@@ -273,22 +290,28 @@ a:visited {
 				text-align: center;
 				background-repeat: no-repeat;
 				background-position: center center;
-				-webkit-background-size: 140px;
-				   -moz-background-size: 140px;
-				     -o-background-size: 140px;
-				        background-size: 140px;
+				-webkit-background-size: 130px;
+				   -moz-background-size: 130px;
+					 -o-background-size: 130px;
+						background-size: 130px;
 				opacity: 0.3;
 				-webkit-transition: opacity .25s ease-in-out;
-			       -moz-transition: opacity .25s ease-in-out;
-			        -ms-transition: opacity .25s ease-in-out;
-			         -o-transition: opacity .25s ease-in-out;
-			        	transition: opacity .25s ease-in-out;
+				   -moz-transition: opacity .25s ease-in-out;
+					-ms-transition: opacity .25s ease-in-out;
+					 -o-transition: opacity .25s ease-in-out;
+						transition: opacity .25s ease-in-out;
 			}
 
 			.brand-list-item:hover {
 				opacity: 0.9;
 			}
 		}
+	}
+
+	.brand-list-wrap:after {
+		display: block;
+		content: "";
+		clear:both;
 	}
 }
 
@@ -405,55 +428,13 @@ a:visited {
 }
 
 /*-- sub header --*/
-
-.sub-header {
-	color: #909090;
-	width: 100%;
-	height: 72px;
-	background-color: black;
-
-	.logo {
-		width: 30px;
-		padding-top: 24px;
-	}
-
-	.nav-custom {
-		display: inline-block;
-		width: 100%;
-		list-style: none;
-		padding: 0;
-		text-align: right;
-
-		li {
-			color: #909090;
-			height: 72px;
-			display: inline-block;
-			margin-left: -3px;
-			padding: 24px 24px 0 24px;
-		}
-
-		li:hover {
-			color: #fff;
-			background-color: #363b3d;
-			-webkit-transition: background-color .25s ease-in-out, color .25s ease-in-out;
-		       -moz-transition: background-color .25s ease-in-out, color .25s ease-in-out;
-		        -ms-transition: background-color .25s ease-in-out, color .25s ease-in-out;
-		         -o-transition: background-color .25s ease-in-out, color .25s ease-in-out;
-		        	transition: background-color .25s ease-in-out, color .25s ease-in-out;
-		}
-
-		li:last-child {
-			border-right: none;
-		}
-	}
-}
-
 .sub-title {
 	color: #fff;
-	padding: 134px 0;
 	text-align: center;
+	height: 400px;
 
 	h1 {
+		margin-top: 108px;
 		font-weight: 200;
 		font-size: 48px;
 		word-break: keep-all;
@@ -474,10 +455,51 @@ footer.footer-block {
 	background-color: #141313;
 }
 
-.background-full {
-	background-position: center center;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-} 
+
+
+@media screen and (max-width: 767px) {
+	.sub-header {
+		.nav-custom {
+			display: inline-block;
+			position: fixed;
+			width: 100%;
+			top: 0;
+			right: 0;
+			list-style: none;
+			padding: 0;
+			text-align: right;
+
+			li {
+				color: #909090;
+				height: 72px;
+				display: inline-block;
+				margin-left: -3px;
+				padding: 27px 16px 0 16px;
+				border-right: 1px solid rgba(255,255,255,0.15);
+			}
+
+			li:last-child {
+				border-right: 0;
+			}
+		}
+	}
+
+	.brand-block {
+		.brand-list-wrap {
+			li {
+				width: 50%;
+				height: 90px;
+
+				.brand-list-item {
+					width: 100%;
+					height: 100px;
+					padding: 40px 16px 16px 16px;
+					-webkit-background-size: 80px;
+					   -moz-background-size: 80px;
+						 -o-background-size: 80px;
+							background-size: 80px;
+				}
+			}
+		}
+	}
+}
