모바일 디자인 추가

--- a/css/common.css
+++ b/css/common.css
@@ -106,6 +106,7 @@
   background-image: url(../images/logo/logo-royal-copenhagen.png);
 }
 body {
+  color: #969ea4;
   font-family: sans-serif;
   font-weight: 500;
   letter-spacing: -0.01em;
@@ -126,6 +127,12 @@ button {
 .divider {
   width: 100%;
   height: 1px;
+  border-top: 1px solid #efefef;
+}
+.divider-sub {
+  width: 100%;
+  height: 1px;
+  margin: 48px 0;
   border-top: 1px solid #efefef;
 }
 .concept-hero {
@@ -175,7 +182,40 @@ button {
   text-align: center;
 }
 .block {
-  padding: 64px 0;
+  padding: 58px 0;
+  /*--
+	h3.paragraph-header:before {
+		content: "'";
+		display: inline;
+		width: 48px;
+		height: 48px;
+		margin-right: -8px;
+		background-image: url(../images/q-start.png);
+		background-repeat: no-repeat;
+		background-position: center center;
+		-webkit-background-size: 48px;
+		   -moz-background-size: 48px;
+			 -o-background-size: 48px;
+				background-size: 48px;
+		z-index: 1;
+	}
+
+	h3.paragraph-header:after {
+		content: "'";
+		display: inline;
+		width: 48px;
+		height: 64px;
+		margin-left: -8px;
+		background-image: url(../images/q-end.png);
+		background-repeat: no-repeat;
+		background-position: center 16px;
+		-webkit-background-size: 48px;
+		   -moz-background-size: 48px;
+			 -o-background-size: 48px;
+				background-size: 48px;
+		z-index: 1;
+	}
+  --*/
 }
 .block .header,
 .block .header-sub,
@@ -187,11 +227,10 @@ button {
   color: #44494c;
   font-size: 36px;
   font-weight: 600;
-  margin-bottom: 36px;
 }
 .block .header-sub {
-  color: #14232b;
-  font-size: 18px;
+  color: #7a8187;
+  font-size: 16px;
   margin: 8px 0 40px 0;
 }
 .block h3.paragraph-header {
@@ -205,40 +244,10 @@ button {
   z-index: 5;
   letter-spacing: -0.04em;
 }
-.block h3.paragraph-header:before {
-  content: "";
-  display: inline-block;
-  width: 48px;
-  height: 48px;
-  margin-right: -8px;
-  background-image: url(../images/q-start.png);
-  background-repeat: no-repeat;
-  background-position: center center;
-  -webkit-background-size: 48px;
-  -moz-background-size: 48px;
-  -o-background-size: 48px;
-  background-size: 48px;
-  z-index: 1;
-}
-.block h3.paragraph-header:after {
-  content: "";
-  display: inline-block;
-  width: 48px;
-  height: 64px;
-  margin-left: -8px;
-  background-image: url(../images/q-end.png);
-  background-repeat: no-repeat;
-  background-position: center 16px;
-  -webkit-background-size: 48px;
-  -moz-background-size: 48px;
-  -o-background-size: 48px;
-  background-size: 48px;
-  z-index: 1;
-}
 .block p {
   margin-bottom: 36px;
-  font-size: 16px;
-  line-height: 170%;
+  font-size: 15px;
+  line-height: 180%;
   text-align: center;
 }
 .block p:last-child {
@@ -312,27 +321,6 @@ button {
   margin: 0 auto;
   padding-top: 16px;
 }
-.concept-block {
-  color: #fff;
-}
-.concept-block .header {
-  color: #fff;
-}
-.concept-block .description {
-  line-height: 170%;
-}
-.concept-block .paragraph {
-  font-size: 16px;
-  line-height: 200%;
-  word-break: keep-all;
-}
-.concept-block .paragraph strong {
-  display: inline-block;
-  font-size: 20px;
-  line-height: 200%;
-  word-break: keep-all;
-  text-align: center;
-}
 .brand-block .brand-item {
   height: 190px;
   padding: 24px;
@@ -395,16 +383,13 @@ button {
   content: "";
   clear: both;
 }
-.cafe-block {
-  color: #fff;
-  width: 100%;
-  background-color: #FAFAFA;
-  padding: 68px 0;
-}
 .cafe-block h2.header {
   color: #fff;
 }
 .cafe-block h3.header-sub {
+  color: #bfc8cf;
+}
+.cafe-block p {
   color: #fff;
 }
 /* --.news-block {
@@ -438,24 +423,6 @@ button {
 		}
 	}
 } --*/
-.direction-block {
-  width: 100%;
-  background-color: #FAFAFA;
-  padding: 68px 0;
-}
-.direction-block h3.title {
-  color: #313231;
-  font-weight: 600;
-  font-size: 20px;
-  margin-bottom: 14px;
-  padding-top: 76px;
-  padding-bottom: 14px;
-  border-bottom: 1px solid #e4e4e4;
-  background-repeat: no-repeat;
-  background-size: 72px 72px;
-  background-position: top center;
-  text-align: center;
-}
 .contact-block {
   color: #fff;
   width: 100%;
@@ -517,6 +484,60 @@ footer.footer-block {
   background-color: #141313;
 }
 @media screen and (max-width: 767px) {
+  .intro-header {
+    height: 600px;
+  }
+  .intro-header .nav-custom li {
+    font-size: 14px;
+    margin: 0 4px;
+    padding-right: 9px;
+    border-right: 1px solid rgba(255, 255, 255, 0.1);
+  }
+  .intro-header .nav-custom li:last-child {
+    margin: 0 0 0 3px;
+  }
+  .intro-header h1 {
+    font-size: 48px;
+    margin-top: 86px;
+  }
+  .intro-header h2 {
+    font-size: 16px;
+    margin-top: 24px;
+  }
+  .intro-header .btn-more-info {
+    padding-top: 68px;
+    text-align: center;
+  }
+  .block {
+    padding: 25px 0;
+  }
+  .block .header {
+    font-size: 30px;
+  }
+  .block .header-sub {
+    color: #7a8187;
+    font-size: 15px;
+    margin: 8px 0 24px 0;
+  }
+  .block h3.paragraph-header {
+    font-size: 24px;
+  }
+  .block p {
+    margin-bottom: 24px;
+    font-size: 13px;
+  }
+  .contact-block {
+    padding: 25px 0;
+  }
+  .contact-block .header-sub {
+    color: #fff;
+  }
+  .contact-block .contact-item {
+    font-size: 24px;
+  }
+  .contact-block .contact-item strong {
+    font-size: 15px;
+  }
   .sub-header .nav-custom {
     display: inline-block;
     position: fixed;
