--- a/css/common.less
+++ b/css/common.less
@@ -160,7 +160,7 @@ button {
 
 .intro-header {
 	width: 100%;
-	height: 900px;
+	height: 800px;
 	color: #fff;
 
 	.logo {
@@ -414,7 +414,7 @@ footer.footer-block {
 
 @media screen and (max-width: 767px) {
 	.intro-header {
-		height: 600px;
+		height: 500px;
 
 		.nav-custom {
 			li {
@@ -526,6 +526,17 @@ footer.footer-block {
 							background-size: 80px;
 				}
 			}
+		}
+	}
+}
+
+@media screen and (min-width: 768px) and (max-width: 990px) {
+	.intro-header {
+		height: 600px;
+
+		.btn-more-info {
+			padding-top: 48px;
+			text-align: center;
 		}
 	}
 }
