--- a/css/common.css
+++ b/css/common.css
@@ -526,6 +526,22 @@ footer.footer-block {
     margin-bottom: 24px;
     font-size: 13px;
   }
+  .sub-title {
+    color: #fff;
+    text-align: center;
+    height: 360px;
+  }
+  .sub-title h1 {
+    margin-top: 68px;
+    font-weight: 200;
+    font-size: 36px;
+  }
+  .sub-title h2 {
+    font-size: 16px;
+    line-height: 170%;
+    font-weight: 300;
+    margin: 0;
+  }
   .contact-block {
     padding: 25px 0;
   }
@@ -537,27 +553,6 @@ footer.footer-block {
   }
   .contact-block .contact-item strong {
     font-size: 15px;
-  }
-  .sub-header .nav-custom {
-    display: inline-block;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    right: 0;
-    list-style: none;
-    padding: 0;
-    text-align: right;
-  }
-  .sub-header .nav-custom li {
-    color: #909090;
-    height: 72px;
-    display: inline-block;
-    margin-left: -3px;
-    padding: 27px 16px 0 16px;
-    border-right: 1px solid rgba(255, 255, 255, 0.15);
-  }
-  .sub-header .nav-custom li:last-child {
-    border-right: 0;
   }
   .brand-block .brand-list-wrap li {
     width: 50%;
