--- a/css/common.less
+++ b/css/common.less
@@ -468,6 +468,25 @@ footer.footer-block {
 		}
 	}
 
+	.sub-title {
+		color: #fff;
+		text-align: center;
+		height: 360px;
+
+		h1 {
+			margin-top: 68px;
+			font-weight: 200;
+			font-size: 36px;
+		}
+
+		h2 {
+			font-size: 16px;
+			line-height: 170%;
+			font-weight: 300;
+			margin: 0;
+		}
+	}
+
 	.contact-block {
 		padding: 25px 0;
 
@@ -480,32 +499,6 @@ footer.footer-block {
 
 			strong {
 				font-size: 15px;
-			}
-		}
-	}
-
-	.sub-header {
-		.nav-custom {
-			display: inline-block;
-			position: fixed;
-			width: 100%;
-			top: 0;
-			right: 0;
-			list-style: none;
-			padding: 0;
-			text-align: right;
-
-			li {
-				color: #909090;
-				height: 72px;
-				display: inline-block;
-				margin-left: -3px;
-				padding: 27px 16px 0 16px;
-				border-right: 1px solid rgba(255,255,255,0.15);
-			}
-
-			li:last-child {
-				border-right: 0;
 			}
 		}
 	}
